changing ASCII markup to HTML markup, per Denise's cats

--- a/accessibility_training/a11y.html
+++ b/accessibility_training/a11y.html
@@ -119,7 +119,9 @@
     the Rebuilding Fund to help midtown Manhattan recover from the recent alien invasion. </p>
 
     <p>A reminder to all SHIELD employees: both SHIELD and the Maria Stark Foundation will match 100% of your contribution to the Rebuilding fund for the
-    remainder of the year. That means that for every $1 you donate, the fund will receive $3! It's an easy way to stretch your dollars *and* make a
+    remainder of the year. That means that for every $1 you
+    donate, the fund will receive $3! It's an easy way to stretch
+    your dollars  <strong>and</strong> make a
     difference.</p>
 
     <p><a href="generic.html">Contact the Payroll Office</a> to arrange a donation today.</p>
