--- a/accessibility_training/nona11y.html
+++ b/accessibility_training/nona11y.html
@@ -116,7 +116,9 @@
     the Rebuilding Fund to help midtown Manhattan recover from the recent alien invasion. </p>
 
     <p>A reminder to all SHIELD employees: both SHIELD and the Maria Stark Foundation will match 100% of your contribution to the Rebuilding fund for the
-    remainder of the year. That means that for every $1 you donate, the fund will receive $3! It's an easy way to stretch your dollars *and* make a
+    remainder of the year. That means that for every $1 you
+    donate, the fund will receive $3! It's an easy way to stretch
+    your dollars  <b>and</b> make a
     difference.</p>
 
     <p>Contact the Payroll Office to
