adding warning messages reminding people in which files to avoid spoilers

--- a/accessibility_training/a11y.html
+++ b/accessibility_training/a11y.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- DON'T LOOK HERE UNTIL YOU'VE DONE THE EXERCISE. This is the
+     code for the accessible fixed version of the site! You
+     should edit the broken version. -->
     <head>
         <title>SHIELD Human Resources Newsletter</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
