--- a/accessibility_training/a11y.html
+++ b/accessibility_training/a11y.html
@@ -13,7 +13,7 @@
     </head>
     <body >
         <div id="skip">
-        <a href="#content" tabindex="1">Skip to Main</a>
+        <a href="#main-center" tabindex="1">Skip to Main</a>
         </div>
             <div id="page">
     
